# pandoc-columns

./: CHANGELOG.md  README.md  default.nix  flake.nix  pandoc-columns.cabal
.github/workflows/: flakehub-publish-tagged.yml
app/: Main.hs
src/Text/Pandoc/Filters/: Columns.hs
