cabal-version:      2.4
name:               pandoc-columns
version:            0.2.0.1
description:        Pandoc filter to support columns in Markdown.
synopsis:           Pandoc filter to support columns in Markdown.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2020-2022 Amy de Buitléir
category:           Text
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   src
  exposed-modules:
    Text.Pandoc.Filters.Columns
  build-depends:
    base                               >= 4.15.1 && < 4.16,
    pandoc                             >= 2.17.1 && < 2.18,
    pandoc-types                       >= 1.22.1 && < 1.23,
  ghc-options:      -Wall -Wunused-packages
  
executable pandoc-columns
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base                               >= 4.15.1 && < 4.16,
    pandoc-columns,
    pandoc-types                       >= 1.22.1 && < 1.23,
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
