cabal-version:      3.0
name:               pandoc-columns
version:            0.2.0.3
description:        Pandoc filter to support columns in Markdown.
synopsis:
    Pandoc filter that provides a Markdown extension for columns.
homepage:           https://github.com/mhwombat/pandoc-columns
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2020-2022 Amy de Buitléir
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type:              git
  location:          https://github.com/mhwombat/pandoc-columns.git

common common-stuff
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  build-depends:
    base ^>=4.15.1.0,
    pandoc-types >= 1.22.2 && < 1.23
  ghc-options: -Wall  -Wunused-packages

library
  import:           common-stuff
  hs-source-dirs:   src
  exposed-modules:  Text.Pandoc.Filters.Columns
  build-depends:
    pandoc >= 2.17.1 && < 2.18,

executable pandoc-columns
    import:           common-stuff
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        pandoc-columns

