cabal-version:   3.0
name:            pandoc-columns
version:         0.2.0.5
synopsis:
    A pandoc filter that provides a Markdown extension for columns.
description:
  For more information and a tutorial on how to use this package,
  please see the README at <https://github.com/mhwombat/pandoc-columns#readme>.
homepage:        https://github.com/mhwombat/pandoc-columns
bug-reports:     https://github.com/mhwombat/pandoc-columns/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Amy de Buitléir
maintainer:      amy@nualeargais.ie
copyright:       (c) 2020-2023 Amy de Buitléir
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type:              git
  location:          https://github.com/mhwombat/pandoc-columns.git

common common-stuff
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  build-depends:
    base,
    pandoc-types
  ghc-options: -Wall  -Wunused-packages

library
  import:           common-stuff
  hs-source-dirs:   src
  exposed-modules:  Text.Pandoc.Filters.Columns
  build-depends:
    pandoc

executable pandoc-columns
  import:           common-stuff
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    pandoc-columns

